manifests/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "azehmwcluster-83f1"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "azehmwcluster-83f1"
  template:
    metadata:
      labels:
        app: "azehmwcluster-83f1"
    spec:
      containers:
        - name: "azehmwcluster-83f1"
          image: "demoreghmw.azurecr.io/azehmwcluster"
          ports:
          - containerPort: 80
